17-k8-network/roboshop.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: roboshop
spec:
  containers:
    - name: nginx
      image: nginx
